<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="randallj24@student.jhs.net">James Randall</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>core</depend>
  <exec_depend>math</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
